--- a/JKO/JKO.csproj
+++ b/JKO/JKO.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\JKO.Service\JKO.Service.csproj" />
+  </ItemGroup>
+
 </Project>
