DB 基本相關FUNCTION準備完成

--- a/JKO.Service/JKO.Service.csproj
+++ b/JKO.Service/JKO.Service.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <Folder Include="LISTING\" />
+    <Folder Include="CateGory\" />
     <Folder Include="User\" />
   </ItemGroup>
 
