--- a/JKO.Dao/JKO.Dao.csproj
+++ b/JKO.Dao/JKO.Dao.csproj
@@ -5,7 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Repo\" />
+    <PackageReference Include="Dapper" Version="2.0.78" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="5.0.0" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\JKO.Model\JKO.Model.csproj" />
   </ItemGroup>
 
 </Project>
