--- a/JKO/JKO.csproj
+++ b/JKO/JKO.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\JKO.Dao\JKO.Dao.csproj" />
     <ProjectReference Include="..\JKO.Service\JKO.Service.csproj" />
   </ItemGroup>
 
