REGISTER CREATE_LISTING DELETE_LISTING 轉 軟刪除

--- a/JKO.Service/JKO.Service.csproj
+++ b/JKO.Service/JKO.Service.csproj
@@ -5,9 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="LISTING\" />
     <Folder Include="CateGory\" />
-    <Folder Include="User\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\JKO.Dao\JKO.Dao.csproj" />
   </ItemGroup>
 
 </Project>
